fix formatting on firefox
git-svn-id: http://svn.dojotoolkit.org/src@7355 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/branches/0.4/src/widget/templates/Menu2.css
+++ b/branches/0.4/src/widget/templates/Menu2.css
@@ -102,6 +102,7 @@
 	z-index: 1;
 	padding: 3px 8px;
 	display: inline;/* needed in khtml to display correctly */
+	display: -moz-inline-box;/* needed in firefox */
 	cursor:pointer;
 	cursor:hand;
 }
